検索フォームまで作成

--- a/kadai-web/src/main/resources/ValidationMessages.properties
+++ b/kadai-web/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,4 @@
 # this file contains the default messages of JSR 303 bean validation for validations provided in the common library
 
 org.terasoluna.gfw.common.codelist.ExistInCodeList.message = Does not exist in {codeListId}
+com.example.common.validation.AlphaNumeric.message = \u5165\u529B\u30A8\u30E9\u30FC\u3067\u3059
