--- a/kadai-env/src/main/resources/META-INF/spring/kadai-infra.properties
+++ b/kadai-env/src/main/resources/META-INF/spring/kadai-infra.properties
@@ -1,5 +1,6 @@
 database=H2
-database.url=jdbc:h2:mem:kadai;DB_CLOSE_DELAY=-1
+#database.url=jdbc:h2:mem:kadai;DB_CLOSE_DELAY=-1
+database.url=jdbc:h2:~/kadai
 database.username=sa
 database.password=
 database.driverClassName=org.h2.Driver
