--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
         <version>5.0.1.RELEASE</version>
     </parent>
 
-    <name>TERASOLUNA Server Framework for Java (5.x) Web Blank Multi Project (MyBatis3)</name>
+    <name>TERASOLUNA Server Framework for Java (5.x) Web Blank Multi Project (MyBatis3)-kadai</name>
     <description>Web Blank Multi Project (MyBatis3) using TERASOLUNA Server Framework for Java (5.x)</description>
-    <url>http://terasoluna.org</url>
+    <url>http://kadai.hoge</url>
     <inceptionYear>2014</inceptionYear>
     <licenses>
         <license>
@@ -23,7 +23,7 @@
         </license>
     </licenses>
     <organization>
-        <name>TERASOLUNA Framework Team</name>
+        <name>TERASOLUNA Framework Team?</name>
         <url>http://terasoluna.org</url>
     </organization>
     <repositories>
