--- a/kadai-web/.settings/org.eclipse.core.resources.prefs
+++ b/kadai-web/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//src/main/resources=UTF-8
 encoding//src/main/webapp/WEB-INF/views/top/menu.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/user/registerConfirm.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/user/registerForm.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/user/searchList.jsp=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
 encoding/<project>=UTF-8
